# mrhspeechd

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/API_Providers/: API_Providers.rst
doc/source/Audio_Format/: Audio_Format.rst
doc/source/Building/: Building.rst
doc/source/Building/Dependencies/: Google_Cloud_API.rst  Picovoice_Cobra.rst  Picovoice_Leopard.rst  SDL2.rst
doc/source/Configuration_File/: Configuration_File.rst
doc/source/Configuration_File/API_Provider/: ChunkVolume.rst  GoogleCloud.rst  PicovoiceCobra.rst  PicovoiceLeopard.rst  SDL2.rst
doc/source/Signals/: Signals.rst
src/: Configuration.cpp  Configuration.h  DataNotifier.h  Exception.h  Logger.cpp  Logger.h  Main.cpp  Revision.h
src/Audio/: AudioBuffer.h  Player.h  Recorder.h  RecorderContext.h  SpeechChecker.h
src/Audio/API/: AudioAPI.h  CreateAudioAPI.cpp  CreateAudioAPI.h
src/Audio/API/ChunkVolume/: ChunkVolume.cpp  ChunkVolume.h
src/Audio/API/PicovoiceCobra/: PicovoiceCobra.cpp  PicovoiceCobra.h
src/Audio/API/SDL2/: SDL2Device.h  SDL2PlaybackContext.h  SDL2Player.cpp  SDL2Player.h  SDL2Recorder.cpp  SDL2Recorder.h  SDL2RecordingContext.h
src/STT/: STT.h
src/STT/API/: CreateSTTAPI.cpp  CreateSTTAPI.h  STTAPI.h
src/STT/API/GoogleCloudSTT/: GoogleCloudSTT.cpp  GoogleCloudSTT.h
src/STT/API/PicovoiceLeopard/: PicovoiceLeopard.cpp  PicovoiceLeopard.h
src/Stream/: UTF8Stream.cpp  UTF8Stream.h
src/TTS/: TTS.h
src/TTS/API/: CreateTTSAPI.cpp  CreateTTSAPI.h  TTSAPI.h
src/TTS/API/GoogleCloudTTS/: GoogleCloudTTS.cpp  GoogleCloudTTS.h
